(fricken) safari spacing fixes

--- a/less/components/_navbar.less
+++ b/less/components/_navbar.less
@@ -12,6 +12,7 @@
 
 .navbar-brand{
   height: auto;
+  padding-right: 0;
 
   @media (max-width: @screen-sm-max) {
     float: none;
@@ -59,6 +60,7 @@
   font-size: 18px;
   line-height: 1;
   margin-top: 1.25em;
+  margin-left: 0;
 
   strong{
     display: block;
@@ -80,7 +82,7 @@
   }
 
   .navbar__exams{
-    margin: 0 1em;
+    margin: 0 0.5em;
 
     a{
       font-family: @headings-font-family;
